# random_bot_lite

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
bot/: config_reader.py  crud.py  database.py  db.py  defaults.py  handlers.py  keyboards.py  log_handle.py  log_manager.py  main.py  middlewares.py  migrator.py  models.py  schemas.py  services.py  session_gen.py  val_channels.csv
bot/common/: check_channels.py  defaults.py  json_merger.py  log_handle.py
bot/datab/: channel_handler.py  crud.py  migrate.py  models.py
bot/datab/db/: channels.db
bot/database/: __init__.py  crud.py  database.py  methods.py  models.py  schemas.py  session_gen.py
bot/db_data/: migrator.py  val_channels.json
bot/handlers/: __init__.py  admin_handlers.py  callbacks.py  commands.py  error_handlers.py  handlers.py  routers.py  user_commands.py  user_handlers.py
bot/keyboards/: builder.py  keyboards.py
bot/llm_manager/: summary.py
bot/middlewares/: middlewares.py
bot/monitoring/: metrics_collector.py  metrics_server.py
bot/service/: admin_validation.py  bayesian_avarage.py  bot_answers.py  channel_validation.py  default_answers.py  defaults.py  log_manager.py
bot/utils/: __init__.py  admin_validation.py  bot_answers.py  cache.py  cache_manager.py  channel_validation.py  default_answers.py  defaults.py  globals.py  log_manager.py  math_manager.py  message_manager.py  validation_manager.py
bot/wc_manager/: __init__.py  wordcloud_gen.py
provision/roles/docker_install/tasks/: main.yaml
