[project]
name = "random-bot-lite"
version = "0.1.0"
description = "Random telegram channel bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiologger>=0.7.0",
    "ansible>=10.7.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "prometheus-client>=0.22.1",
    "pydantic>=2.4.1",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.41",
]
