[project]
name = "random-bot-lite"
version = "0.1.0"
description = "Random telegram channel bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "aiologger>=0.7.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "pydantic>=2.4.1",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.41",
    "tqdm>=4.67.1",
]
