[project]
name = "random-bot-lite"
version = "0.1.0"
description = "Random telegram channel bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiologger>=0.7.0",
    "aiomysql>=0.3.2",
    "bs4>=0.0.2",
    "cachetools>=6.2.1",
    "dotenv>=0.9.9",
    "groq>=0.33.0",
    "pydantic>=2.4.1",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.41",
]
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]

ignore = []
